Add routing and basic interface for Lobby, Login and CreateUser

--- a/Frontend/src/app/components/game/game.component.html
+++ b/Frontend/src/app/components/game/game.component.html
@@ -1,1 +1,7 @@
-<p>game works!</p>
+<div class="game">
+    <div class="flex-container">
+        <div class="card">TEST</div>
+        <div class="card">TEST</div>
+        <div class="card">TEST</div>
+    </div>
+</div>
