--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div class="container">
+    <h1>StarDeck</h1>
+    <form>
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-primary" (click)="goToLobby()">Login</button>
+        <button mat-raised-button (click)="goToCreateUser()">Crear Usuario</button>
+    </form>
+</div>
