Add: card and multiple cards component

--- a/Frontend/src/app/components/lobby/lobby.component.html
+++ b/Frontend/src/app/components/lobby/lobby.component.html
@@ -1,3 +1,4 @@
 <div class="box">
+    <app-multiple-cards></app-multiple-cards>
     <button mat-raised-button (click)="findGame()">Buscar Partida</button>
 </div> 
