--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    //background-color: #0f2b2c;
+    color: #f0f0f0;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-image: url('assets/images/background.png');
+    background-size: cover;
+  }
+
+  @font-face {
+    font-family: 'JostItalic';
+    src: url('https://github.com/Yorbre25/StarDeck_Develop/blob/interfazCartaYJugador/Frontend/src/assets/fonts/Jost-Italic-VariableFont_wght.ttf');
+  }
+
+  @font-face {
+    font-family: 'Jost';
+    src: url('https://github.com/Yorbre25/StarDeck_Develop/blob/interfazCartaYJugador/Frontend/src/assets/fonts/Jost-VariableFont_wght.ttf');
+  }
