Update: card interface

--- a/Frontend/src/app/components/elements/card/card.component.html
+++ b/Frontend/src/app/components/elements/card/card.component.html
@@ -1,13 +1,18 @@
 <div class="card">
-    <div class="card-header">{{ name }}</div>
-    <div class="card-body">
-      <img src="{{ image }}" alt="{{ name }}" class="card-image">
-      <div class="card-details">
-        <div class="card-energy">Energy: {{ energy }}</div>
-        <div class="card-price">Price: {{ price }}</div>
-        <div class="card-type">Type: {{ type }}</div>
-        <div class="card-race">Race: {{ race }}</div>
-        <div class="card-description">{{ description }}</div>
-      </div>
-    </div>
-  </div>
+  <mat-card>
+    <mat-card-title class="mat-card-title">{{name}}</mat-card-title>
+    <img class="mat-card-image" mat-card-image [src]="image" alt="card-image">
+    <mat-card-content class=".overflow-y-scroll" class="mat-card-content">
+      <p>
+          {{description}}
+      </p>
+      <p>
+        <strong>Type:</strong> {{type}} 
+        <strong>Race:</strong> {{race}}
+      </p>
+      <p> 
+        {{energy}} ⚡ {{price}} 💰
+      </p>
+    </mat-card-content>
+  </mat-card>
+</div>
