--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -16,3 +16,5 @@ body {
     font-family: 'Jost';
     src: url('https://github.com/Yorbre25/StarDeck_Develop/blob/interfazCartaYJugador/Frontend/src/assets/fonts/Jost-VariableFont_wght.ttf');
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
