--- a/Frontend/src/app/components/views/login/login.component.html
+++ b/Frontend/src/app/components/views/login/login.component.html
@@ -3,19 +3,8 @@
         <img src="assets/images/logo.png" alt="Logo">
     </div>
     <div class="form-container">
-        <form>
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary" (click)="goToLobby()">Login</button>
-            <button mat-raised-button (click)="goToCreateUser()">Crear Usuario</button>
-        </form>
-
+        <app-login-form></app-login-form>
+        <button mat-raised-button (click)="goToCreateUser()">Crear Usuario</button>
     </div>
 
 </div>
