--- a/Frontend/src/app/components/elements/card/card.component.html
+++ b/Frontend/src/app/components/elements/card/card.component.html
@@ -1,18 +1,20 @@
-<div class="card">
-  <mat-card>
-    <mat-card-title class="mat-card-title">{{name}}</mat-card-title>
-    <img class="mat-card-image" mat-card-image [src]="image" alt="card-image">
-    <mat-card-content class=".overflow-y-scroll" class="mat-card-content">
-      <p>
-          {{description}}
-      </p>
-      <p>
-        <strong>Type:</strong> {{type}} 
-        <strong>Race:</strong> {{race}}
-      </p>
-      <p> 
-        {{energy}} ⚡ {{price}} 💰
-      </p>
-    </mat-card-content>
-  </mat-card>
-</div>
+
+  <div class="card">
+    <mat-card>
+      <mat-card-title class="mat-card-title">{{name}}</mat-card-title>
+      <img class="mat-card-image" mat-card-image [src]="image" alt="card-image">
+      <mat-card-content class="mat-card-content">
+        <p>
+            {{description}}
+        </p>
+        <p>
+          <strong>Type:</strong> {{type}} 
+          <strong>Race:</strong> {{race}}
+        </p>
+        <p> 
+          {{energy}} ⚡ {{price}} 💰
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </div>
+
