--- a/Frontend/src/app/components/forms/login-form/login-form.component.html
+++ b/Frontend/src/app/components/forms/login-form/login-form.component.html
@@ -1,17 +1,20 @@
 <div class="form-signin">
-    <form>
-        <h1 class="h3 mb-3 font-weight-normal">Inicie sesión</h1>
+    <form class="form-signin">
+        <h4 class="title-text">Inicie sesión</h4>
 
         <mat-form-field>
-            <input type="text" id="email" name="email" matInput placeholder="Ingrese su correo" formControlName="email" required>
+            <input class="form-text" type="text" id="email" name="email" matInput placeholder="Ingrese su correo"
+                formControlName="email" required>
             <mat-error>Por favor ingrese un correo válido.</mat-error>
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Ingrese su contraseña" type="password" formControlName="password" required>
+            <input class="form-text" matInput placeholder="Ingrese su contraseña" type="password"
+                formControlName="password" required>
             <mat-error>Por favor ingrese una contraseña.</mat-error>
         </mat-form-field><br />
-        <button type="submit" mat-raised-button color="warn">Login</button>
-        
+        <button class="button-text" type="submit" mat-raised-button (click)="goToLobby()">Login</button>
+        <! -- la verificacion no se hace porque el click solo sigue al lobby pq el login no esta hecho -->
+
     </form>
 
 </div>
