--- a/Frontend/src/app/components/forms/login-form/login-form.component.scss
+++ b/Frontend/src/app/components/forms/login-form/login-form.component.scss
@@ -1,24 +1,6 @@
-.example-container mat-form-field + mat-form-field {
-    margin-left: 8px;
-  }
-  
-  .example-container mat-form-field {
-    width: 220px;
-  }
-  
-  .example-container form {
-    margin-bottom: 20px;
-  }
-  
-  .example-container form > * {
-    margin: 12px 0;
-  }
-  
-  .example-container .mat-radio-button {
-    margin: 0 12px;
-  }
-  
-  .example-form-fields {
-    display: flex;
-    align-items: flex-start;
-  }
+.form-signin{
+    justify-content: center;
+    text-align: center;
+}
+
+
