--- a/Frontend/src/app/components/views/login/login.component.html
+++ b/Frontend/src/app/components/views/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="image-container">
-        <img src="assets/images/logo.png" alt="Logo">
+        <img src="assets/images/logo-big.png" alt="logo-big">
     </div>
     <div class="form-container">
         <app-login-form></app-login-form>
-        <button mat-raised-button (click)="goToCreateUser()">Crear Usuario</button>
+        <button class="underlined-button" (click)="goToCreateUser()">¿No tiene una cuenta? Registrarse</button>
     </div>
 
 </div>
