update: sign up view

--- a/Frontend/src/app/components/forms/login-form/login-form.component.html
+++ b/Frontend/src/app/components/forms/login-form/login-form.component.html
@@ -12,7 +12,7 @@
                 formControlName="password" required>
             <mat-error>Por favor ingrese una contraseña.</mat-error>
         </mat-form-field><br />
-        <button class="button-text" type="submit" mat-raised-button (click)="goToLobby()">Login</button>
+        <button class="button-text" type="submit" mat-raised-button (click)="goToLobby()">Iniciar Sesión</button>
         <! -- la verificacion no se hace porque el click solo sigue al lobby pq el login no esta hecho -->
 
     </form>
