--- a/Frontend/src/app/components/views/create-user/create-user.component.html
+++ b/Frontend/src/app/components/views/create-user/create-user.component.html
@@ -1,34 +1,7 @@
 <div class="container">
-    <h2>Create User</h2>
-    <form>
-        <div class="form-group">
-            <label for="email">Correo:</label>
-            <input type="email" id="email" name="email" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" class="form-control">
-          </div>
-          <div class="form-group">
-            <label for="lastname">Apellido:</label>
-            <input type="text" id="lastname" name="lastname" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="nationality">Nacionalidad:</label>
-            <input type="text" id="nationality" name="nationality" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="email">Alias:</label>
-            <input type="text" id="username" name="username" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" class="form-control">
-        </div>
-        <div class="form-group">
-            <label for="password">Reingresar Contraseña:</label>
-            <input type="password" id="rewritePassword" name="rewritePassword" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-primary" (click)="goToLobby()">Crear</button>
-    </form>
+    <h2 class="title-text">Registrarse </h2>
+    <div class="form-container">
+        <app-sign-up-form></app-sign-up-form>
+    </div>
+    
 </div>
