--- a/Frontend/src/app/components/views/lobby/lobby.component.html
+++ b/Frontend/src/app/components/views/lobby/lobby.component.html
@@ -1,16 +1,1 @@
-<mat-sidenav-container class="container">
-    
-    <mat-sidenav #sidenav mode="side" opened class="sidenav-cont" [fixedInViewport]="options.value.fixed"
-        [fixedTopGap]="options.value.top" [fixedBottomGap]="options.value.bottom">
-        <mat-nav-list>
-            <p><button class="button-navbar" mat-button (click)="sidenav.toggle()">✖️</button></p>
-            <a mat-list-item routerLink="/">Cartas</a>
-            <a mat-list-item routerLink="/">Crear Carta</a>
-            <a mat-list-item routerLink="/">Salir</a>
-          </mat-nav-list>
-          
-    </mat-sidenav>
-
-
-    <p><button class="button-text" mat-button (click)="sidenav.toggle()">⏩</button></p>
-</mat-sidenav-container>
+<app-side-menu></app-side-menu>
