Update: navbar toggle disabled

--- a/Frontend/src/app/components/elements/card/card.component.html
+++ b/Frontend/src/app/components/elements/card/card.component.html
@@ -1,4 +1,5 @@
 
+  <app-side-menu></app-side-menu>
   <div class="card">
     <mat-card>
       <mat-card-title class="mat-card-title">{{name}}</mat-card-title>
@@ -17,4 +18,5 @@
       </mat-card-content>
     </mat-card>
   </div>
+
 
