Update: login interface

--- a/Frontend/src/app/components/elements/side-menu/side-menu.component.html
+++ b/Frontend/src/app/components/elements/side-menu/side-menu.component.html
@@ -3,8 +3,7 @@
     <mat-sidenav #sidenav mode="side" opened class="sidenav-cont" [fixedInViewport]="options.value.fixed"
         [fixedTopGap]="options.value.top" [fixedBottomGap]="options.value.bottom">
         <mat-nav-list>
-
-            <img src="assets/images/logo.png" alt="logo">
+            <img class="navbar-image" src="assets/images/logo.png" alt="logo">
             <a mat-list-item routerLink="/cards">Cartas</a>
             <a mat-list-item routerLink="/create_card">Crear Carta</a>
             <a mat-list-item routerLink="/lobby">Lobby</a>
