--- a/Frontend/src/app/components/forms/login-form/login-form.component.html
+++ b/Frontend/src/app/components/forms/login-form/login-form.component.html
@@ -3,12 +3,12 @@
         <h4 class="title-text">Inicie sesión</h4>
 
         <mat-form-field>
-            <input class="form-text" type="text" id="email" name="email" matInput placeholder="Ingrese su correo"
+            <input class="form-input" type="text" id="email" name="email" matInput placeholder="Ingrese su correo"
                 formControlName="email" required>
             <mat-error>Por favor ingrese un correo válido.</mat-error>
-        </mat-form-field>
+        </mat-form-field><br />
         <mat-form-field>
-            <input class="form-text" matInput placeholder="Ingrese su contraseña" type="password"
+            <input class="form-input" matInput placeholder="Ingrese su contraseña" type="password"
                 formControlName="password" required>
             <mat-error>Por favor ingrese una contraseña.</mat-error>
         </mat-form-field><br />
