--- a/Frontend/src/app/components/views/login/login.component.scss
+++ b/Frontend/src/app/components/views/login/login.component.scss
@@ -14,6 +14,11 @@
     display: grid;
     justify-content: center;
     background-color: #2a556e80;
+    border-radius: 10px;
+    box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
+                0px 5px 8px 0px rgba(0,0,0,0.14),
+                0px 1px 14px 0px rgba(0,0,0,0.12);
+
 }
 
 .container {
