--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -21,6 +21,20 @@ body {
     font-size: 1.1rem;
 }
 
+.form-input {
+    font-family: 'Rajdhani-SemiBold';
+    text-align: center;
+    color: #000000;
+    font-size: 1rem;
+    border-radius: 10px;
+    box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
+                0px 5px 8px 0px rgba(0,0,0,0.14),
+                0px 1px 14px 0px rgba(0,0,0,0.12);
+    background-color: white;
+    border: none;
+}
+
+
 .button-text {
     font-family: 'Rajdhani-SemiBold';
     text-align: center;
