Update: login interface

--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -74,3 +74,5 @@ body {
     font-family: 'Rajdhani-SemiBold';
     src: url('assets/fonts/Rajdhani-SemiBold.ttf');
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
