--- a/Frontend/src/app/components/views/login/login.component.scss
+++ b/Frontend/src/app/components/views/login/login.component.scss
@@ -1,6 +1,6 @@
 .image-container {
 
-    padding-top: 200px;
+    padding-top: 150px;
     padding-bottom: 50px;
     display: flex;
     justify-content: center;
@@ -13,6 +13,7 @@
     font-size: 2rem;
     display: grid;
     justify-content: center;
+    align-items: center;
     background-color: #2a556e80;
     border-radius: 10px;
     box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
@@ -23,5 +24,6 @@
 
 .container {
     display: grid;
-    justify-content: center;
+    //justify-content: center;
+    justify-items: center;
 }
