Centering textboxs login menu

--- a/Frontend/src/app/components/forms/login-form/login-form.component.html
+++ b/Frontend/src/app/components/forms/login-form/login-form.component.html
@@ -1,19 +1,23 @@
 <div class="form-signin">
     <form class="form-signin">
         <h4 class="title-text">Inicie sesión</h4>
-
         <mat-form-field>
-            <input class="form-input" type="text" id="email" name="email" matInput placeholder="Ingrese su correo"
-                formControlName="email" required>
-            <mat-error>Por favor ingrese un correo válido.</mat-error>
-        </mat-form-field><br />
+            <div style="text-align:center;"> 
+                <input class="form-input" type="text" id="email" name="email" matInput placeholder="Ingrese su correo"
+                    formControlName="email" required>
+                <mat-error>Por favor ingrese un correo válido.</mat-error>
+            </div>
+        </mat-form-field>
         <mat-form-field>
-            <input class="form-input" matInput placeholder="Ingrese su contraseña" type="password"
-                formControlName="password" required>
-            <mat-error>Por favor ingrese una contraseña.</mat-error>
-        </mat-form-field><br />
+            <div style="text-align:center;"> 
+                <input class="form-input" matInput placeholder="Ingrese su contraseña" type="password"
+                    formControlName="password" required>
+                <mat-error>Por favor ingrese una contraseña.</mat-error>
+            </div>
+        </mat-form-field>
         <button class="button-text" type="submit" mat-raised-button (click)="goToLobby()">Iniciar Sesión</button>
         <! -- la verificacion no se hace porque el click solo sigue al lobby pq el login no esta hecho -->
+        
 
     </form>
 
