--- a/Frontend/src/app/components/forms/login-form/login-form.component.scss
+++ b/Frontend/src/app/components/forms/login-form/login-form.component.scss
@@ -1,6 +1,9 @@
 .form-signin{
+    display: flex;
     justify-content: center;
     text-align: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 
