--- a/Frontend/src/app/components/forms/sign-up-form/sign-up-form.component.html
+++ b/Frontend/src/app/components/forms/sign-up-form/sign-up-form.component.html
@@ -1,31 +1,54 @@
-<form >
+<form class="form-group">
     <div class="form-group">
-        <label for="email">Correo</label>
-        <input type="email" id="email" name="email" class="form-text">
+        <mat-label for="mail"> Correo: </mat-label>
+        <input [formControl]="mail" type="email" id="email" name="email" class="form-input" style="width: 300px;" placeholder="example@something.com" required>
+        <br>
+        <mat-error *ngIf="mail.invalid && fault">{{getErrMessage(mail)}}</mat-error>
     </div>
+    <br>
     <div class="form-group">
-        <label for="name">Nombre</label>
-        <input type="text" id="name" name="name" class="form-text">
-      </div>
-      <div class="form-group">
-        <label for="lastname">Apellido</label>
-        <input type="text" id="lastname" name="lastname" class="form-text">
+        <mat-label for="name">Nombre: </mat-label>
+        <input [formControl]="playerName" type="text" id="name" name="name" class="form-input" style="width: 300px;" placeholder="John" required>
+        <br>
+        <mat-error *ngIf="playerName.invalid  && fault">{{getErrMessage(playerName)}}</mat-error>
     </div>
+    <br>
     <div class="form-group">
-        <label for="nationality">Nacionalidad</label>
-        <input type="text" id="nationality" name="nationality" class="form-text">
+        <mat-label for="lastname">Apellido: </mat-label>
+        <input [formControl]="playerLastName"type="text" id="lastname" name="lastname" class="form-input" style="width: 300px;" placeholder="Doe" required>
+        <br>
+        <mat-error *ngIf="playerLastName.invalid  && fault">{{getErrMessage(playerLastName)}}</mat-error>
     </div>
+    <br>
     <div class="form-group">
-        <label for="email">Alias</label>
-        <input type="text" id="username" name="username" class="form-text">
+        <mat-label for="nationality">Nacionalidad: </mat-label>
+        <select [formControl]="playerNationality" id="nationality" name="nationality" class="form-input" style="width: 300px;" required>
+            <option *ngFor="let nation of nationalities">
+                {{nation}}
+            </option>
+        </select>
+        <br>
+        <mat-error *ngIf="playerNationality.invalid  && fault">{{getErrMessage(playerNationality)}}</mat-error>
     </div>
+    <br>
     <div class="form-group">
-        <label for="password">Contraseña</label>
-        <input type="password" id="password" name="password" class="form-text">
+        <mat-label for="username">Alias: </mat-label>
+        <input [formControl]="playerAlias" type="text" id="username" name="username" class="form-input" style="width: 300px;" placeholder="_JD2001_" required>
+        <br>
+        <mat-error *ngIf="playerAlias.invalid && fault">{{getErrMessage(playerAlias)}}</mat-error>   
     </div>
+    <br>
     <div class="form-group">
-        <label for="password">Reingresar Contraseña</label>
-        <input type="password" id="rewritePassword" name="rewritePassword" class="form-text">
+        <mat-label for="password">Contraseña: </mat-label>
+        <input [formControl]="playerPassword" type="password" id="password" name="password" class="form-input" style="width: 300px;" required>
+        <br>
+        <mat-error *ngIf="fault">{{getErrMessage(playerPassword)}}</mat-error>
     </div>
+    <br>
+    <div class="form-group">
+        <mat-label for="password">Confirmar Contraseña: </mat-label>
+        <input [formControl]="confirmPassword" type="password" id="rewritePassword" name="rewritePassword" class="form-input" style="width: 300px;" required>
+    </div>
+    <br>
     <button type="submit" class="button-text" (click)="goToLobby()">Crear</button>
 </form>
