--- a/Frontend/src/app/components/elements/side-menu/side-menu.component.html
+++ b/Frontend/src/app/components/elements/side-menu/side-menu.component.html
@@ -1,14 +1,26 @@
-<mat-sidenav-container class="container">
-    
-    <mat-sidenav #sidenav mode="side" opened class="sidenav-cont" [fixedInViewport]="options.value.fixed"
-        [fixedTopGap]="options.value.top" [fixedBottomGap]="options.value.bottom">
+<mat-toolbar color="#251c36" class="example-toolbar">
+    <button class="button-text" mat-icon-button  (click)="isExpanded = !isExpanded"><mat-icon>menu</mat-icon></button>
+    <img class="navbar-image" src="assets/images/logo.png" alt="logo"> <h1 class="form-text">Administrador</h1>
+</mat-toolbar>
+<mat-sidenav-container class="example-container" autosize>
+    <mat-sidenav #sidenav class="example-sidenav" mode="side" opened="true" (mouseenter)="mouseenter()"
+        (mouseleave)="mouseleave()">
         <mat-nav-list>
-            <img class="navbar-image" src="assets/images/logo.png" alt="logo">
-            <a mat-list-item routerLink="/cards">Cartas</a>
-            <a mat-list-item routerLink="/create_card">Crear Carta</a>
-            <a mat-list-item routerLink="/lobby">Lobby</a>
-            <a mat-list-item routerLink="/">Salir</a>
-          </mat-nav-list>
-          
+            <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent">
+                <span class="full-width" class="form-text" *ngIf="isExpanded || isShowing">Manejo de Cartas</span>
+                <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubmenu}"
+                    *ngIf="isExpanded || isShowing">expand_more</mat-icon>
+            </mat-list-item>
+            <div class="submenu" [ngClass]="{'expanded' : showSubmenu}" *ngIf="isShowing || isExpanded">
+                <a mat-list-item  class="sub-text" routerLink="/cards">Crear Carta <mat-icon mat-list-icon>view_carousel</mat-icon> </a>
+                <a mat-list-item class="sub-text" href="...">Crear Deck <mat-icon mat-list-icon>view_module</mat-icon></a>
+            </div>
+        </mat-nav-list>
+        <mat-nav-list>
+            <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent">
+                <span class="full-width" class="form-text" *ngIf="isExpanded || isShowing">Salir</span>
+            </mat-list-item>
+            
+        </mat-nav-list>
     </mat-sidenav>
 </mat-sidenav-container>
