--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -34,6 +34,12 @@ body {
     border: none;
 }
 
+.form-input:focus{
+    border: 2px solid #00c0fe;
+    box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
+                0px 5px 8px 0px rgba(0,0,0,0.14),
+                0px 1px 14px 0px rgba(0,0,0,0.12);
+}
 
 .button-text {
     font-family: 'Rajdhani-SemiBold';
