--- a/Frontend/src/app/components/forms/create-card-form/create-card-form.component.html
+++ b/Frontend/src/app/components/forms/create-card-form/create-card-form.component.html
@@ -1,7 +1,7 @@
 <app-side-menu></app-side-menu>
 <form class="form-container">
     <div class="form-group">
-        <mat-label for="name">Nombre del personaje: </mat-label>
+        <mat-label class="form-text" for="name">Nombre del personaje: </mat-label>
         <input [formControl]="characterName" type="text" id="name" name="name" class="form-input" style="width: 300px;"
             placeholder="Nyan Cat" required>
         <br>
@@ -12,14 +12,14 @@
        
     <div class="form-flex">
         <div class="form-group">
-            <mat-label for="race">Raza: </mat-label>
+            <mat-label class="form-text" for="race">Raza: </mat-label>
             <input [formControl]="race" type="text" id="race" name="race" class="form-input" style="width: 150px;"
                 placeholder="Cat" required>
             <br>
             <mat-error *ngIf="race.invalid  && fault">{{getErrMessage(race)}}</mat-error>
         </div>
         <div class="form-group">
-            <mat-label for="type">Tipo: </mat-label>
+            <mat-label class="form-text" for="type">Tipo: </mat-label>
             <select [formControl]="type" id="type" name="type" class="form-input" placeholder="SSR"
                 style="width: 150px;" required>
                 <option *ngFor="let type of types">
@@ -33,14 +33,14 @@
     <br>
     <div class="form-flex">
         <div class="form-group">
-            <mat-label for="energy">Energía: </mat-label>
+            <mat-label class="form-text" for="energy">Energía: </mat-label>
             <input [formControl]="energy" type="number" id="energy" name="energy" class="form-input" placeholder="100"
                 style="width: 150px;" required>
             <br>
             <mat-error *ngIf="energy.invalid  && fault">{{getErrMessage(energy)}}</mat-error>
         </div>
         <div class="form-group">
-            <mat-label for="price">Costo: </mat-label>
+            <mat-label class="form-text" for="price">Costo: </mat-label>
             <input [formControl]="price" type="number" id="price" name="price" class="form-input" style="width: 150px;"
                 placeholder="10000 dolares" required>
             <br>
@@ -48,7 +48,7 @@
         </div>
         
     </div>
-    <mat-label for="description"> Descripción del personaje: </mat-label>
+    <mat-label class="form-text" for="description"> Descripción del personaje: </mat-label>
     <textarea [formControl]="description" type="description" id="description" name="description" class="form-input"
         style="width: 300px;" style="height:100px;"
         placeholder="Nyan Cat, or Pop-Tart Cat, 
