--- a/Frontend/src/app/components/elements/card/card.component.scss
+++ b/Frontend/src/app/components/elements/card/card.component.scss
@@ -1,34 +1,60 @@
 .card {
-    display: flex;
-    flex-direction: column;
+   
     width: 170px;
     height: 270px;
-    background-color: #571632;
-    border: solid 2px #a50960;
-    text-align: center;
+    background: linear-gradient(to right, #4facfe, #00f2fe);
+    border: solid 1px #0f0c16;
+    text-align:justify;
     color: #ff93cf;
     border-radius: 10px;
+    align-items: center;
+    word-wrap: break-word;
 
 }
 
+.form-input {
+    background-color:  #ff93cf80;
+    width: 100%;
+}
 .mat-card-title {
     font-size: 1rem;
     font-weight: bold;
+    width: 170;
     color: #f0f0f0;
+    
+    
+  
+    
 }
 
 .mat-card-image {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
-    border-radius: 10px;
+    height: 120px;
+    width: 120px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    border-radius: 5px;
     border-radius: 10%;
+    
+    
 
 }
 
 .mat-card-content {
-
+    padding-top: 2px;
     font-size: 0.7rem;
+    background-color:  #ff93cf50;
+    height: 110px;
+    width: 130px;
+    line-height: 0.8;
+    border-radius: 10px;
 
+}
+
+.mat-card-description {
+    height: 50px;
+    width: 130px;
+    line-height: 0.4;
+   
 
 }
