--- a/Frontend/src/app/components/elements/side-menu/side-menu.component.html
+++ b/Frontend/src/app/components/elements/side-menu/side-menu.component.html
@@ -3,6 +3,7 @@
     <img class="navbar-image" src="assets/images/logo.png" alt="logo">
     <button mat-button class="form-text" routerLink="/create_card">Crear Carta</button>
     <button mat-button class="form-text" routerLink="/cards">Ver Cartas</button>
+    <button mat-button class="form-text" routerLink="/">Salir</button>
 </mat-toolbar>
 
 
