Update: create card interface

--- a/Frontend/src/app/components/views/create-card/create-card.component.html
+++ b/Frontend/src/app/components/views/create-card/create-card.component.html
@@ -1,3 +1,16 @@
 <app-side-menu></app-side-menu>
+
 <app-back-button></app-back-button>
-<app-create-card-form></app-create-card-form>
+<h4 class="title-text">Crear Carta</h4>
+<div class = "box">
+    <app-card class = "app-card"
+    name="Nombre del Personaje"
+    image="https://upload.wikimedia.org/wikipedia/en/e/ed/Nyan_cat_250px_frame.PNG"
+    energy="XXX"
+    price="XXX"
+    type="XX"
+    race="XXX"
+    description="Descripción."
+    ></app-card>
+    <app-create-card-form></app-create-card-form>
+    </div>
