--- a/Frontend/src/app/components/forms/create-card-form/create-card-form.component.html
+++ b/Frontend/src/app/components/forms/create-card-form/create-card-form.component.html
@@ -1,4 +1,3 @@
-
 <form class="form-container">
     <div class="form-group">
         <mat-label class="form-text" for="name">Nombre del personaje: </mat-label>
@@ -7,56 +6,64 @@
         <br>
         <mat-error *ngIf="characterName.invalid  && fault">{{getErrMessage(characterName)}}</mat-error>
 
-    <br>
-  
-       
-    <div class="form-flex">
-        <div class="form-group">
-            <mat-label class="form-text" for="race">Raza: </mat-label>
-            <input [formControl]="race" type="text" id="race" name="race" class="form-input" style="width: 150px;"
-                placeholder="Cat" required>
-            <br>
-            <mat-error *ngIf="race.invalid  && fault">{{getErrMessage(race)}}</mat-error>
-        </div>
-        <div class="form-group">
-            <mat-label class="form-text" for="type">Tipo: </mat-label>
-            <select [formControl]="type" id="type" name="type" class="form-input" placeholder="SSR"
-                style="width: 150px;" required>
-                <option *ngFor="let type of types">
-                    {{type}}
-                </option>
-            </select>
-            <br>
-            <mat-error *ngIf="type.invalid  && fault">{{getErrMessage(type)}}</mat-error>
-        </div>
-    </div>
-    <br>
-    <div class="form-flex">
-        <div class="form-group">
-            <mat-label class="form-text" for="energy">Energía: </mat-label>
-            <input [formControl]="energy" type="number" id="energy" name="energy" class="form-input" placeholder="100"
-                style="width: 150px;" required>
-            <br>
-            <mat-error *ngIf="energy.invalid  && fault">{{getErrMessage(energy)}}</mat-error>
-        </div>
-        <div class="form-group">
-            <mat-label class="form-text" for="price">Costo: </mat-label>
-            <input [formControl]="price" type="number" id="price" name="price" class="form-input" style="width: 150px;"
-                placeholder="10000 dolares" required>
-            <br>
-            <mat-error *ngIf="price.invalid && fault">{{getErrMessage(price)}}</mat-error>
-        </div>
-        
-    </div>
-    <mat-label class="form-text" for="description"> Descripción del personaje: </mat-label>
-    <textarea [formControl]="description" type="description" id="description" name="description" class="form-input"
-        style="width: 300px;" style="height:100px;"
-        placeholder="Nyan Cat, or Pop-Tart Cat, 
-    refers to a cartoon cat with a Pop-Tart body and a rainbow behind it, flying through space, set to the tune of a Japanese pop song."
-        required></textarea>
-    <br>
-    <mat-error *ngIf="description.invalid && fault">{{getErrMessage(description)}}</mat-error>
-</div>
+        <br>
 
-    <button type="submit" class="button-text" (click)="goToLobby()">Crear</button>
+
+        <div class="form-flex">
+            <div class="form-group">
+                <mat-label class="form-text" for="race">Raza: </mat-label>
+                <input [formControl]="race" type="text" id="race" name="race" class="form-input" style="width: 150px;"
+                    placeholder="Cat" required>
+                <br>
+                <mat-error *ngIf="race.invalid  && fault">{{getErrMessage(race)}}</mat-error>
+            </div>
+            <div class="form-group">
+                <mat-label class="form-text" for="type">Tipo: </mat-label>
+                <select [formControl]="type" id="type" name="type" class="form-input" placeholder="SSR"
+                    style="width: 150px;" required>
+                    <option *ngFor="let type of types">
+                        {{type}}
+                    </option>
+                </select>
+                <br>
+                <mat-error *ngIf="type.invalid  && fault">{{getErrMessage(type)}}</mat-error>
+            </div>
+        </div>
+        <br>
+        <div class="form-flex">
+            <div class="form-group">
+                <mat-label class="form-text" for="energy">Energía: </mat-label>
+                <input [formControl]="energy" type="number" id="energy" name="energy" class="form-input"
+                    placeholder="100" style="width: 150px;" required>
+                <br>
+                <mat-error *ngIf="energy.invalid  && fault">{{getErrMessage(energy)}}</mat-error>
+            </div>
+            <div class="form-group">
+                <mat-label class="form-text" for="price">Costo: </mat-label>
+                <input [formControl]="price" type="number" id="price" name="price" class="form-input"
+                    style="width: 150px;" placeholder="10000 dolares" required>
+                <br>
+                <mat-error *ngIf="price.invalid && fault">{{getErrMessage(price)}}</mat-error>
+            </div>
+
+        </div>
+        <mat-label class="form-text" for="description"> Descripción del personaje: </mat-label>
+        <textarea [formControl]="description" type="description" id="description" name="description" class="form-input"
+            style="width: 300px;" style="height:100px;"
+            placeholder="Nyan Cat, or Pop-Tart Cat, 
+    refers to a cartoon cat with a Pop-Tart body and a rainbow behind it, flying through space, set to the tune of a Japanese pop song." required></textarea>
+        <br>
+        <mat-error *ngIf="description.invalid && fault">{{getErrMessage(description)}}</mat-error>
+    </div>
+
+    <div class="form-flex">
+        <button>
+            Add Image
+            <input type="file" (change)="onFileSelected($event)" accept="image/*" hidden>
+        </button>
+
+        <button type="submit" class="button-text" (click)="goToLobby()">Crear</button>
+    </div>
+
+
 </form>
