--- a/Frontend/src/app/components/forms/create-card-form/create-card-form.component.scss
+++ b/Frontend/src/app/components/forms/create-card-form/create-card-form.component.scss
@@ -48,3 +48,9 @@
     justify-content: right;
     text-align: right;
 }
+
+.hidden {
+    visibility: hidden;
+    width: 1px;
+    height: 1px;
+  }
