--- a/Frontend/src/app/components/elements/card/card.component.html
+++ b/Frontend/src/app/components/elements/card/card.component.html
@@ -1,20 +1,24 @@
 
   <div class="card">
     <mat-card class="card">
-      <mat-card-title class="form-input">{{name}}</mat-card-title>
-      <img class="mat-card-image" mat-card-image [src]="image" alt="card-image">
-      <mat-card-content class="mat-card-content">
-        <mat-label >
-            {{description}}
-        </mat-label>
-        <p>
-          <strong>Type:</strong> {{type}} 
-          <strong>Race:</strong> {{race}}
-        </p>
-        <p> 
-          {{energy}} ⚡ {{price}} 💰
-        </p>
-      </mat-card-content>
+     
+      
+        <mat-card-title class="form-input">{{element.name}}</mat-card-title>
+        <img class="mat-card-image" mat-card-image [src]="element.image" alt="card-image">
+        <mat-card-content class="mat-card-content">
+          <mat-label >
+              {{element.description}} 
+          </mat-label>
+          <br><br>
+          <p>
+            <strong>Race:</strong> {{element.race}}
+          </p>
+            {{element.energy}} ⚡ {{element.price}} 💰 <strong>{{element.type}} </strong> 
+          
+        </mat-card-content>
+     
+        
+     
     </mat-card>
   </div>
 
