--- a/Frontend/src/app/components/elements/clickable-card/clickable-card.component.scss
+++ b/Frontend/src/app/components/elements/clickable-card/clickable-card.component.scss
@@ -1,14 +1,21 @@
 .card {
    
-    width: 110px;
-    height: 190px;
+    width: 170px;
+    height: 270px;
     background: linear-gradient(to right, #4facfe, #00f2fe);
     border: solid 1px #0f0c16;
     text-align:justify;
-    color: #ff93cf;
+    color: black;
     border-radius: 10px;
     align-items: center;
     word-wrap: break-word;
+
+}
+
+.card:hover {
+    cursor: pointer;
+    background: white;
+    border: solid 1px #4facfe;
 
 }
 
@@ -28,10 +35,11 @@
 }
 
 .mat-card-image {
-    height: 60px;
-    width: 60px;
-
-
+    height: 120px;
+    width: 120px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
     border-radius: 5px;
     border-radius: 10%;
     
@@ -41,20 +49,18 @@
 
 .mat-card-content {
     padding-top: 2px;
-    font-size: 0.5rem;
-    color: black;
+    font-size: 0.7rem;
     background-color:  #ff93cf50;
-    height: 80px;
-    width: 90px;
+    height: 110px;
+    width: 130px;
     line-height: 0.8;
     border-radius: 10px;
-    padding: 10px;
 
 }
 
 .mat-card-description {
     height: 50px;
-    width: 50px;
+    width: 130px;
     line-height: 0.4;
    
 
