--- a/Frontend/src/app/components/pop-ups/initial-card-chooser/initial-card-chooser.component.html
+++ b/Frontend/src/app/components/pop-ups/initial-card-chooser/initial-card-chooser.component.html
@@ -1,9 +1,21 @@
-<mat-card>
-    <h2>Choose from 15 cards</h2>
-    <!-- Display the 15 cards here -->
-  </mat-card>
+<div class="dialog">
+  <h2 mat-dialog-title class="title-text">Elegir Cartas</h2>
+  <div class="form-flex">
+    <mat-card>
+      <h2 class = "title-text">Se han añadido estas 15 cartas a sus cartas.</h2>
+      <div class="form-flex">
+        <app-multiple-cards></app-multiple-cards>
+      
+      </div>
+    </mat-card>
+    
+    <mat-card>
+      <h2 class = "title-text">Elija una de estas tres cartas para añadir.</h2>
+      <app-multiple-clickable-cards></app-multiple-clickable-cards>
+    </mat-card>
+  </div>
+  <div class="pop-up-button">
+    <button class="button-text" (click)="close()">Save</button>
+  </div>
   
-  <mat-card>
-    <h2>Choose one of these three cards</h2>
-    <!-- Display the three cards here -->
-  </mat-card>
+</div>
