--- a/Frontend/src/app/components/views/create-card/create-card.component.html
+++ b/Frontend/src/app/components/views/create-card/create-card.component.html
@@ -3,7 +3,7 @@
 <app-back-button></app-back-button>
 <h4 class="title-text">Crear Carta</h4>
 <div class = "box">
-    <app-card class = "app-card"
+    <app-clickable-card class = "app-card"
     name="Nombre del Personaje"
     image="https://upload.wikimedia.org/wikipedia/en/e/ed/Nyan_cat_250px_frame.PNG"
     energy="XXX"
@@ -11,6 +11,6 @@
     type="XX"
     race="XXX"
     description="Descripción."
-    ></app-card>
+    ></app-clickable-card>
     <app-create-card-form></app-create-card-form>
     </div>
