--- a/Frontend/src/app/components/elements/multiple-cards/multiple-cards.component.scss
+++ b/Frontend/src/app/components/elements/multiple-cards/multiple-cards.component.scss
@@ -1,5 +1,8 @@
 .multiple-cards{
-    display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px;
+  margin-bottom: 20px;
   }
 
   .app-card{
