--- a/Frontend/src/app/components/views/create-user/create-user.component.scss
+++ b/Frontend/src/app/components/views/create-user/create-user.component.scss
@@ -1,18 +1,24 @@
 .container {
-    display: flex;
+    margin:5vw;
+    padding-top:5vw;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    background-color: #2a556e80;
+    box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
+    0px 5px 8px 0px rgba(0,0,0,0.14),
+    0px 1px 14px 0px rgba(0,0,0,0.12);
+    border-radius: 10px;
+    width:fit-content;
+    
+
     
 }
 
 .title-text {
 
-    background-color: #2a556e80;
-    width: 33.33vw;
-    text-align: right;
-    font-size: 6rem;
-    padding-top: 75vh;
-    padding-right: 1vw;
-    
-    
+    text-align: center;
+    font-size: 2rem;      
 }
 
 .form-container {
